--- a/ABRlist.html
+++ b/ABRlist.html
@@ -94,9 +94,9 @@
             <li><a href="Aberrations/ABR-018/ABR018.html">ABR-018 - Reflective Aberration</a></li>
             <li><a href="Aberrations/ABR-019/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
             <li><a href="Aberrations/ABR-020/ABR020.html">ABR-020 - Memory Leech</a></li>
-            <li><a href="Aberrations/ABR-021/ABR021.html">ABR-021 - </a></li>
-            <li><a href="Aberrations/ABR-022/ABR022.html">ABR-022 - </a></li>
-            <li><a href="Aberrations/ABR-023/ABR023.html">ABR-023 - </a></li>
+            <li><a href="Aberrations/ABR-021/ABR021.html">ABR-021 - Infinite Vase</a></li>
+            <li><a href="Aberrations/ABR-022/ABR022.html">ABR-022 - Rebreather</a></li>
+            <li><a href="Aberrations/ABR-023/ABR023.html">ABR-023 - Energivore Battery</a></li>
             <li><a href="Aberrations/ABR-024/ABR024.html">ABR-024 - </a></li>
             <li><a href="Aberrations/ABR-025/ABR025.html">ABR-025 - </a></li>
             <li><a href="Aberrations/ABR-026/ABR026.html">ABR-026 - </a></li>
