--- a/Aberrations/ABR-023/ABR023.html
+++ b/Aberrations/ABR-023/ABR023.html
@@ -23,70 +23,70 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none.
+            text-decoration: none;
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black.
+            color: black;
         }
         .container {
             padding: 20px;
-            margin: 20px auto.
-            max-width: 800px.
-            background-color: #4B4B4B.
-            border-radius: 8px.
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+            margin: 20px auto;
+            max-width: 800px;
+            background-color: #4B4B4B;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         .header-section {
-            display: flex.
-            justify-content: space-between.
-            align-items: flex-start.
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
         }
         .header-section div {
-            flex: 1.
+            flex: 1;
         }
         .image-container {
-            max-width: 300px.
-            margin-left: 20px.
-            border-radius: 8px.
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
-            background-color: #3D3D3D.
-            padding: 10px.
-            text-align: center.
+            max-width: 300px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center;
         }
         .image-container img {
-            max-width: 100%.
-            border-radius: 8px.
+            max-width: 100%;
+            border-radius: 8px;
         }
         .image-container p {
-            margin: 10px 0 0 0.
-            font-size: 14px.
-            color: #D3D3D3.
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
         }
         h1 {
-            font-size: 22px.
-            border-bottom: 1px solid #666.
-            padding-bottom: 2px.
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         h2 {
-            font-size: 18px.
-            color: #D3D3D3.
-            margin-top: 40px.
-            margin-bottom: -10px.
-            border-bottom: 1px solid #666.
-            padding-bottom: 2px.
+            font-size: 18px;
+            color: #D3D3D3;
+            margin-top: 40px;
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
-            font-size: 16px.
-            line-height: 1.6.
-            color: #D3D3D3.
+            font-size: 16px;
+            line-height: 1.6;
+            color: #D3D3D3;
         }
         ul {
-            list-style-type: none.
-            padding-left: 0.
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
-            padding: 5px 0.
+            padding: 5px 0;
         }
     </style>
 </head>
