--- a/Aberrations/ABR-023/ABR023.html
+++ b/Aberrations/ABR-023/ABR023.html
@@ -111,7 +111,7 @@
                 <p><strong>Containment Division:</strong> Gamma-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-023">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-023/ABR-023.jpg" alt="Image of ABR-023">
                 <p>First image of ABR-023</p>
             </div>
         </div>
