--- a/Aberrations/ABR-023/ABR023.html
+++ b/Aberrations/ABR-023/ABR023.html
@@ -112,7 +112,7 @@
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-023/ABR-023.jpg" alt="Image of ABR-023">
-                <p>First image of ABR-023</p>
+                <p>ABR-023</p>
             </div>
         </div>
 
