--- a/Aberrations/ABR-024/ABR024.html
+++ b/Aberrations/ABR-024/ABR024.html
@@ -116,30 +116,29 @@
             </div>
         </div>
 
-        <h2>Special Containment Procedures</h2>
-        <p>ABR-024 is to be monitored remotely via satellite and a dedicated observation vessel positioned at a safe distance of 10 nautical miles. Direct human interaction with ABR-024 is prohibited. Any ships or aircraft approaching within 5 nautical miles of ABR-024 are to be redirected by MTF Theta-4 ("Oil Slickers") under the guise of routine maritime patrols.</p>
-        <p>No crew is to be stationed on ABR-024. Any maintenance or investigations must be conducted by remote-controlled drones. Personnel assigned to ABR-024 must undergo psychological evaluation and training to avoid unconsciousness during operations.</p>
-
         <h2>Description</h2>
-        <p>ABR-024, formerly designated as OR-273, is an offshore oil rig located in the Gulf of Mexico. ABR-024 exhibits anomalous behavior whereby it shifts its location by an average of 20 nautical miles whenever all individuals on board fall asleep simultaneously. These shifts occur instantaneously and without any detectable intermediate states.</p>
-        <p>ABR-024 came to the attention of the Aberration Research Institute on ██/██/20██ after a series of unusual reports from maritime tracking stations. The oil rig was reported missing and later reappeared several miles from its original location without any clear explanation. The crew was discovered to have fallen asleep due to an unknown cause, waking up in a different location.</p>
-        <p>On ██/██/20██, ABR-024 underwent a significant anomalous event. During this shift, the rig's drilling apparatus began extracting a substance identified as human blood (designated ABR-024-A) instead of crude oil. ABR-024-A has been confirmed to be of various blood types, though the source remains unidentified.</p>
-        <p>Analysis of ABR-024-A has revealed it to be chemically identical to human blood, with DNA analysis indicating multiple human donors. The volume of ABR-024-A extracted is far beyond what would be expected from a natural source, suggesting a potentially extradimensional or anomalous reservoir.</p>
+        <p>ABR-024, formerly known as OR-273, is an offshore oil rig located in the Gulf of Mexico. This rig exhibits anomalous behavior, notably shifting its location by an average of 20 nautical miles whenever all individuals on board simultaneously fall asleep. These shifts occur instantaneously and without any detectable intermediate states.</p>
+        <p>The oil rig was first brought to the attention of ARI on ██/██/20██ following a series of reports from maritime tracking stations. Initially reported missing, ABR-024 reappeared several miles from its original position with the crew discovered in a state of unexplained unconsciousness, having relocated without any awareness.</p>
+        <p>On ██/██/20██, ABR-024 exhibited a significant anomalous event where the drilling apparatus began extracting a substance identified as human blood, designated ABR-024-A, instead of crude oil. ABR-024-A comprises various human blood types with DNA indicating multiple human donors. The volume extracted far exceeds any natural source, suggesting an extradimensional or otherwise anomalous reservoir.</p>
 
-        <h2>Addendum ABR-024-1: Incident Report ABR-024-14</h2>
-        <p>On ██/██/20██, an unmanned drone was dispatched to ABR-024 to collect samples of ABR-024-A and to install additional surveillance equipment. During this operation, the drone experienced a temporary loss of signal. Upon re-establishing contact, the drone's footage revealed a drastic change in ABR-024's environment, now appearing in a dense fog with visibility reduced to a few meters.</p>
-        <p>Further analysis of the footage showed indistinct humanoid figures moving within the fog around ABR-024. These entities did not approach the drone and disappeared as the fog dissipated.</p>
+        <h2>Containment Protocols</h2>
+        <p>ABR-024 is monitored remotely via satellite and a dedicated observation vessel stationed 10 nautical miles away. Direct human interaction is prohibited. Any ships or aircraft approaching within 5 nautical miles are to be redirected by MTF Theta-4 ("Oil Slickers") under the guise of routine maritime patrols.</p>
+        <p>No personnel are to be stationed on ABR-024. Maintenance and investigations must be conducted using remote-controlled drones. Assigned personnel must undergo psychological evaluations and training to prevent unconsciousness during operations.</p>
 
-        <h2>Addendum ABR-024-2: Research Log</h2>
-        <p>Dr. ██████'s notes:</p>
-        <p>"We still have no explanation for the source of ABR-024-A or the mechanism behind ABR-024's shifts. The presence of humanoid figures in the fog suggests an intelligent or at least reactive component to this anomaly. Until we understand more, ABR-024 remains a high-priority subject for remote study. No personnel are to board the rig under any circumstances."</p>
+        <h2>Risk Assessment</h2>
+        <p>ABR-024 poses a severe threat due to its unpredictable relocations and the extraction of ABR-024-A. The presence of human blood suggests a potential extradimensional reservoir, raising significant ethical and safety concerns. The shifts in location disrupt maritime traffic and pose a risk of collisions or other accidents.</p>
+        <p>The discovery of humanoid figures in the dense fog surrounding ABR-024 during anomalous events indicates a potential intelligent or reactive component. This necessitates extreme caution and further study to understand the nature and intentions of these entities.</p>
 
-        <h2>Addendum ABR-024-3: Exploration Proposal</h2>
-        <p>Proposal to deploy a high-altitude drone equipped with advanced sensors to map the shifts and analyze the environmental changes during ABR-024's relocations. The aim is to understand the pattern, if any, behind its movements and the connection to ABR-024-A.</p>
-        <p>Approval pending Executive Council review.</p>
-        <p>Note: The discovery of ABR-024 and its ongoing analysis underscore the necessity of caution and thorough remote investigation to prevent further risks to human personnel and to uncover the true nature of this anomaly.</p>
+        <h2>Behavioral Analysis</h2>
+        <p>ABR-024's anomalous activity increases when all individuals on board fall asleep. The extraction of ABR-024-A occurs during these shifts, accompanied by environmental changes such as the appearance of dense fog and humanoid figures. These entities, captured on drone footage, remain indistinct and non-aggressive but suggest a possible sentient interaction with ABR-024.</p>
+        <p>The rig's behavior indicates a potential link between human consciousness and its anomalous properties, necessitating remote operations and continuous monitoring.</p>
 
-        <h1>END OF DOCUMENT ABR-024</h1>
+        <h2>Additional information</h2>
+        <p><strong>Background:</strong> Initial anomalous activities were reported in November 20██ following a severe storm causing extensive damage to the rig. Crew members reported seeing figures and hearing disturbing sounds, leading to the identification of the rig as an aberration.</p>
+        <p><strong>Incident Reports:</strong> Numerous incidents have been documented, including the disappearance of crew members, electrical fires, and acute psychological distress among the crew. Detailed reports are available for review by authorized personnel.</p>
+        <p><strong>Experiments and Research:</strong> Ongoing research aims to identify the source of ABR-024-A and the mechanism behind the rig's shifts. Experimental protocols involve advanced sensors and recording devices to analyze phenomena in real-time.</p>
+
+        <h1>END OF DOCUMENT</h1>
     </div>
 </body>
 </html>
