--- a/Aberrations/ABR-024/ABR024.html
+++ b/Aberrations/ABR-024/ABR024.html
@@ -111,7 +111,7 @@
                 <p><strong>Containment Division:</strong> Delta-2 (High Risk)</p>
             </div>
             <div class="image-container">
-                <img src="https://example.com/path/to/oilrig-image.jpg" alt="Image of ABR-024">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-024/Oil%20Rig.jpg" alt="Image of ABR-024">
                 <p>Image of ABR-024</p>
             </div>
         </div>
