--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -120,22 +120,21 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-001</p>
-                <p><strong>Codename:</strong> Nephological Entity</p>
                 <p><strong>Threat Level:</strong> 06</p>
                 <p><strong>Containment Division:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-001">
-                <p>First image of ABR-001</p>
+                <p>Classified image taken by civilian during initial encounter in [REDACTED].</p>
             </div>
         </div>
 
         <h2>Description</h2>
-        <p>ABR-001, codenamed "Nephological Entity," is a humanoid entity standing approximately 1.8 meters in height, comprised entirely of densely packed cloud formations that constantly shift and change. It resembles a towering cumulonimbus cloud, with its form subtly altering to reflect its mood and intentions. Despite its ethereal composition, the Nephological Entity can interact with physical objects, altering its size, density, and weather-creating capabilities. Its abilities range from creating light cirrus clouds to powerful cumulonimbus thunderstorms. The entity's mood directly influences the type of weather phenomena it manifests, which can include rain, snow, hail, and lightning.</p>
+        <p>ABR-001, codenamed "Nephological Entity," is a humanoid entity standing approximately 1.8 meters in height, composed entirely of densely packed cloud formations that constantly shift and change. It resembles a towering cumulonimbus cloud, with its form subtly altering to reflect its mood and intentions. Despite its ethereal composition, the Nephological Entity can interact with physical objects, altering its size, density, and weather-creating capabilities. Its abilities span from forming light cirrus clouds to summoning powerful cumulonimbus thunderstorms. The entity's mood directly influences the type of weather phenomena it manifests, which can include rain, snow, hail, and lightning.</p>
         <p>The Nephological Entity communicates through changes in its cloud formations and colorations, a visual language that ARI has partially deciphered, allowing for basic interaction.</p>
 
         <h2>Containment Protocols</h2>
-        <p>The Nephological Entity is contained within a specialized facility at ARI's global headquarters. The containment cell is equipped with advanced climate control technology to simulate various weather conditions, providing a conducive environment that helps regulate the entity's capabilities. A robust Faraday cage surrounds the cell to protect against electrical discharges. Continuous monitoring is conducted by ARI personnel with Level 3 clearance or higher. All changes in behavior or atmospheric composition must be documented and reported immediately to the ARI Director.</p>
+        <p>The Nephological Entity is contained within a specialized facility at ARI's global headquarters. The containment cell is equipped with advanced climate control technology to simulate various weather conditions, creating an environment that stabilises the entity’s behaviour and power output. A robust Faraday cage surrounds the cell to protect against electrical discharges. Continuous monitoring is conducted by ARI personnel with Level 3 clearance or higher. All changes in behavior or atmospheric composition must be documented and reported immediately to the ARI Director.</p>
 
         <h2>Risk Assessment</h2>
         <p>The Nephological Entity poses a significant risk due to its ability to generate severe weather conditions based on its emotional state. Distress can lead to dangerous phenomena such as intense thunderstorms and electrical discharges. The entity's unpredictability necessitates rigorous containment protocols to protect ARI personnel and infrastructure.</p>
@@ -143,7 +142,7 @@
         <h2>Behavioral Analysis</h2>
         <p>The entity exhibits a range of behaviors linked to its emotional state, with calm periods marked by benign weather patterns and distress leading to severe weather events. Initial interactions have demonstrated the entity's ability to understand and respond to visual cues, although sudden changes in mood can result in hazardous conditions.</p>
 
-        <h2>Additional information</h2>
+        <h2>Additional Information</h2>
         <p class="incident-report"><strong>Background:</strong></p>
         <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
