--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -106,21 +106,21 @@
         <h1>ABERRATION DOCUMENT: ABR-002</h1>
         <div class="header-section">
             <div>
-                <p><strong>Aberration Designation:</strong> ABR-002 "Voidshadow"</p>
+                <p><strong>Aberration Designation:</strong> ABR-002, "Voidshadow"</p>
                 <p><strong>Threat Level:</strong> 07</p>
                 <p><strong>Containment Division:</strong> Delta-3</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-002/Image%20of%20ABR-002.jpg" alt="Image of ABR-002">
-                <p>ABR-002 in containment cell.</p>
+                <p>ABR-002 within containment chamber.</p>
             </div>
         </div>
 
         <h2>Description</h2>
-        <p>ABR-002, designated "Voidshadow," is a dynamic, fluid-like mass of darkness approximately 2 meters in height. The entity exhibits highly unusual optical properties, appearing as a moving void that absorbs light, rendering it nearly invisible in low-light environments. Its physical form is in constant flux, resembling a viscous liquid shadow with occasional tendrils extending and retracting from its central mass. When stationary, it can merge with shadows, becoming virtually undetectable.</p>
+        <p>ABR-002, designated "Voidshadow," is a fluid-like entity composed entirely of darkness, approximately 2 meters in height. The entity exhibits highly unusual optical properties, appearing as a moving void that absorbs light, rendering it nearly invisible in low-light environments. Its physical form is in constant flux, resembling a viscous liquid shadow with occasional tendrils extending and retracting from its central mass. When stationary, it can merge with shadows, becoming virtually undetectable.</p>
 
         <h2>Containment Protocols</h2>
-        <p><strong>Containment Chamber:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area. The chamber walls must be lined with an array of high-intensity LED lights, ensuring continuous illumination.</p>
+        <p><strong>Containment Chamber:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed from non-reflective, high-density polymer, specifically engineered to minimise ambient reflections and fully absorb interior illumination. The chamber walls must be lined with an array of high-intensity LED lights, ensuring continuous illumination.</p>
         <p><strong>Lighting Requirements:</strong> The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be maintained at a minimum of 10,000 lumens. In the event of a power outage, backup generators must activate immediately to restore full lighting.</p>
         <p><strong>Surveillance:</strong> Continuous 24/7 surveillance is mandatory, with at least two personnel monitoring live feeds at all times. Infrared and ultraviolet cameras are to be utilized to detect ABR-002's presence, as it may attempt to obscure itself using its optical properties.</p>
         <p><strong>Access Restrictions:</strong> Entry to the containment chamber is restricted to personnel with Clearance Level 4 (C4) or higher. All personnel entering the chamber must wear full-body reflective suits to minimize the risk of physical contact. Any maintenance or research activities require prior approval from the Site Director and must be conducted under strict supervision.</p>
