--- a/Aberrations/ABR-009/ABR009.html
+++ b/Aberrations/ABR-009/ABR009.html
@@ -136,7 +136,8 @@
         <h2>Additional Information</h2>
         <p><b>Background:</b></p>
         <p>ABR-009 was first discovered in ████████, ████████, following an ARI investigation into a cluster of unexplained fatalities and mental health crises. Local authorities had abandoned the investigation after several officers suffered debilitating psychological collapses. ARI field agents recovered the entity from the attic of an abandoned home, the walls of which were covered in unknown, ritualistic markings and deteriorated children’s drawings featuring clown imagery. Initial containment was achieved by Dr. █████, who observed the entity's strict nocturnal activity pattern and its acute psychological effects on recovery teams.</p>
-         <p><b>Incident Reports:</b></p>
+        <p><b>Incident Reports:</b></p>
+        <p><b>Incident 009-12</b>: During the first recorded activation within Site-64, ABR-009 animated itself and traversed a distance of 17 meters from its containment locker, causing widespread panic among on-site personnel. The incident necessitated the full execution of Lockdown Procedure Echo-7. Personnel affected during the event displayed acute symptoms of terror and hallucination, and three individuals required extended hospitalization.</p>
 
 
 
