--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -130,29 +130,32 @@
         </div>
 
         <h2>Description</h2>
-        <p>ABR-001, codenamed "Nephological Entity," is a humanoid entity standing approximately 1.8 meters in height, composed entirely of densely packed cloud formations that constantly shift and change. It resembles a towering cumulonimbus cloud, with its form subtly altering to reflect its mood and intentions. Despite its ethereal composition, the Nephological Entity can interact with physical objects, altering its size, density, and weather-creating capabilities. Its abilities span from forming light cirrus clouds to summoning powerful cumulonimbus thunderstorms. The entity's mood directly influences the type of weather phenomena it manifests, which can include rain, snow, hail, and lightning.</p>
-        <p>The Nephological Entity communicates through changes in its cloud formations and colorations, a visual language that ARI has partially deciphered, allowing for basic interaction.</p>
+        <p>ABR-001, codenamed "Nephological Entity", is a humanoid figure standing approximately 1.8 metres tall, composed entirely of densely packed, perpetually shifting cloud matter. Visually, it most closely resembles a vertically extended cumulonimbus cloud, with its form subtly morphing in response to its current emotional state or intent. Despite its intangible appearance, ABR-001 exhibits physical interaction capabilities, able to vary its size, density, and the intensity of weather phenomena it produces.</p>
+        <p>The entity is capable of manifesting a wide range of meteorological events, from thin cirrus veils to violent thunderstorms complete with hail, lightning, and torrential rain. These manifestations are believed to be governed by the entity's emotional state, establishing a direct link between its mood and the localised atmospheric conditions it creates.</p>
+        <p>Communication with ABR-001 occurs through modulations in its cloud structure, density, and coloration. ARI linguistics teams have partially decoded this visual language, allowing for limited yet functional interaction protocols.</p>
 
         <h2>Containment Protocols</h2>
-        <p>The Nephological Entity is contained within a specialized facility at ARI's global headquarters. The containment cell is equipped with advanced climate control technology to simulate various weather conditions, creating an environment that stabilises the entity’s behaviour and power output. A robust Faraday cage surrounds the cell to protect against electrical discharges. Continuous monitoring is conducted by ARI personnel with Level 3 clearance or higher. All changes in behavior or atmospheric composition must be documented and reported immediately to the ARI Director.</p>
-
+        <p>ABR-001 is housed in a high-security, climate-regulated containment chamber located within ARI’s global headquarters. The chamber is equipped with adaptive climate control systems designed to replicate various meteorological environments, enabling behavioural stabilisation and suppressing anomalous fluctuations in atmospheric output.</p>
+        <p>The containment cell is encased within a reinforced Faraday cage to mitigate risk from spontaneous electrical discharges. Internal sensors continuously monitor atmospheric pressure, humidity, and electrostatic activity. Personnel assigned to ABR-001 must hold Level 3 clearance or above. Any deviations in behavioural patterns or atmospheric composition must be documented and immediately reported to the acting ARI Director.</p>
+        
         <h2>Risk Assessment</h2>
-        <p>The Nephological Entity poses a significant risk due to its ability to generate severe weather conditions based on its emotional state. Distress can lead to dangerous phenomena such as intense thunderstorms and electrical discharges. The entity's unpredictability necessitates rigorous containment protocols to protect ARI personnel and infrastructure.</p>
+        <p>The Nephological Entity poses a substantial hazard due to its capacity to generate severe weather events in direct response to emotional fluctuations. Elevated distress levels have been observed to produce intense thunderstorms, electrical discharges, and sudden shifts in local atmospheric pressure. The inherent unpredictability of its mood necessitates strict containment procedures to safeguard ARI personnel and infrastructure.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p>The entity exhibits a range of behaviors linked to its emotional state, with calm periods marked by benign weather patterns and distress leading to severe weather events. Initial interactions have demonstrated the entity's ability to understand and respond to visual cues, although sudden changes in mood can result in hazardous conditions.</p>
+        <p>ABR-001 displays a broad spectrum of behaviours correlated to its emotional state. Calm or neutral conditions typically result in stable, benign atmospheric phenomena such as light cirrus formations or gentle rainfall. In contrast, heightened emotional distress may rapidly escalate into dangerous meteorological events.</p>
+        <p>Preliminary interaction trials have demonstrated the entity’s ability to comprehend and respond to basic visual cues. However, abrupt mood shifts present a continuous risk, requiring all engagement protocols to account for sudden behavioural volatility.</p>
 
         <h2>Additional Information</h2>
         <p class="incident-report"><strong>Background:</strong></p>
-        <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
+        <p class="closer-text">ABR-001 was first identified during an investigation into anomalous weather patterns originating in [REDACTED]. The entity’s presence was confirmed following the onset of an unusually intense and localised thunderstorm, later determined to be a direct manifestation of the anomaly’s distress response. Initial containment required rapid deployment of atmospheric dampening measures and emergency weather suppression units. Since containment, ABR-001’s baseline stress indicators have declined significantly under ongoing behavioural stabilisation protocols.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
-        <p class="closer-text">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
+        <p class="closer-text">During a controlled communication attempt, Doctor ████ and Researcher ████ sustained injuries from a high-voltage discharge triggered by an unexpected shift in ABR-001’s emotional state. Both individuals suffered second-degree burns and required immediate medical intervention. In response, containment infrastructure was upgraded to include a reinforced Faraday cage, and communication protocols were revised to minimise emotional agitation during direct engagement.</p>
         <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" class="report-link">See full report</a></p>
         <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
-            <li class="closer-text"><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
-            <li class="closer-text"><strong>Emotional Intelligence Training:</strong> Required for all personnel interacting with the entity to reduce potential distress triggers.</li>
-            <li class="closer-text"><strong>Emergency Evacuation Directive:</strong> Established for swift evacuation in case of increased distress signals.</li>
+            <li class="closer-text"><strong>Faraday Cage:</strong> Fully integrated into containment cell architecture to mitigate electrical discharge events.</li>
+            <li class="closer-text"><strong>Emotional Intelligence Training:</strong> Mandatory for all personnel assigned to ABR-001 interaction units; focuses on identifying and de-escalating distress triggers.</li>
+            <li class="closer-text"><strong>Emergency Evacuation Directive:</strong> Active fail-safe enabling rapid withdrawal of all on-site personnel in the event of escalating emotional destabilisation.</li>
         </ul>
 
         <h1>END OF DOCUMENT</h1>
