--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -130,7 +130,7 @@
         </div>
 
         <h2>Description</h2>
-        <p>ABR-001, codenamed "Nephological Entity", is a humanoid figure standing approximately 1.8 metres tall, composed entirely of densely packed, perpetually shifting cloud matter. Visually, it most closely resembles a vertically extended cumulonimbus cloud, with its form subtly morphing in response to its current emotional state or intent. Despite its intangible appearance, ABR-001 exhibits physical interaction capabilities, able to vary its size, density, and the intensity of weather phenomena it produces.</p>
+        <p>ABR-001, codenamed "Cumulon", is a humanoid figure standing approximately 1.8 metres tall, composed entirely of densely packed, perpetually shifting cloud matter. Visually, it most closely resembles a vertically extended cumulonimbus cloud, with its form subtly morphing in response to its current emotional state or intent. Despite its intangible appearance, ABR-001 exhibits physical interaction capabilities, able to vary its size, density, and the intensity of weather phenomena it produces.</p>
         <p>The entity is capable of manifesting a wide range of meteorological events, from thin cirrus veils to violent thunderstorms complete with hail, lightning, and torrential rain. These manifestations are believed to be governed by the entity's emotional state, establishing a direct link between its mood and the localised atmospheric conditions it creates.</p>
         <p>Communication with ABR-001 occurs through modulations in its cloud structure, density, and coloration. ARI linguistics teams have partially decoded this visual language, allowing for limited yet functional interaction protocols.</p>
 
@@ -139,7 +139,7 @@
         <p>The containment cell is encased within a reinforced Faraday cage to mitigate risk from spontaneous electrical discharges. Internal sensors continuously monitor atmospheric pressure, humidity, and electrostatic activity. Personnel assigned to ABR-001 must hold Level 3 clearance or above. Any deviations in behavioural patterns or atmospheric composition must be documented and immediately reported to the acting ARI Director.</p>
         
         <h2>Risk Assessment</h2>
-        <p>The Nephological Entity poses a substantial hazard due to its capacity to generate severe weather events in direct response to emotional fluctuations. Elevated distress levels have been observed to produce intense thunderstorms, electrical discharges, and sudden shifts in local atmospheric pressure. The inherent unpredictability of its mood necessitates strict containment procedures to safeguard ARI personnel and infrastructure.</p>
+        <p>ABR-001 poses a substantial hazard due to its capacity to generate severe weather events in direct response to emotional fluctuations. Elevated distress levels have been observed to produce intense thunderstorms, electrical discharges, and sudden shifts in local atmospheric pressure. The inherent unpredictability of its mood necessitates strict containment procedures to safeguard ARI personnel and infrastructure.</p>
 
         <h2>Behavioral Analysis</h2>
         <p>ABR-001 displays a broad spectrum of behaviours correlated to its emotional state. Calm or neutral conditions typically result in stable, benign atmospheric phenomena such as light cirrus formations or gentle rainfall. In contrast, heightened emotional distress may rapidly escalate into dangerous meteorological events.</p>
